Update favicon head

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Dr. Vinícius Januário de Souza | Especialista em Coluna e Dor</title>
   
   <!-- Favicon WhatsApp -->
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" type="image/svg+xml">
-
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-puLkIEgSgRMZ/jKk6j8utVwXZxY6iSOPu8qF7uuhgmEVn1xjKH8u5AlZnqwhQECYoZ5F9wtTJ05v1h+NRUktJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     html {
