Update about text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dr. Vinícius Januário de Souza | Especialista em Coluna e Dor</title>
+  <title>Dr. Vinícius Januário de Souza | Coluna, dor e intervenção</title>
   
   <!-- Favicon WhatsApp -->
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
@@ -319,8 +319,8 @@
 <header>
     <div class="header-container">
         <div class="header-title">
-        <h1>Dr. Vinícius Januário de Souza</h1>
-        <p>Especialista em Coluna e Dor</p>
+        <h1>Dr. Vinícius Januário</h1>
+        <p>Coluna, dor e intervenção</p>
         </div>
         <div class="menu-toggle" id="menu-toggle">
         &#9776; <!-- Ícone hambúrguer -->
@@ -334,14 +334,15 @@
 </header>
 
 <section class="hero">
-    <h2 class="hero-subtitle">Cuidando da sua coluna, cuidando da sua vida</h2>
+    <h2 class="hero-subtitle">Couluna, dor e intervenção</h2>
+    <h2 class="hero-subtitle">Retome sua vida</h2>
 </section>
 
 <div class="container">
 
   <section id="sobre">
     <h2>Sobre o Dr. Vinícius</h2>
-    <p>Com experiência em ortopedia e tratamento da coluna vertebral, o Dr. Vinícius Januário de Souza é especializado no manejo de dores agudas e crônicas. Utiliza técnicas avançadas e procedimentos minimamente invasivos, com foco na recuperação eficiente e na qualidade de vida dos seus pacientes.</p>
+    <p>Sou médico ortopedista especializado em coluna vertebral, com atuação em dor e foco em devolver qualidade de vida através de técnicas modernas e intervenções minimamente invasivas. Minha abordagem é precisa, humana e orientada para resultados rápidos, seguros e duradouros. Ajudar meus pacientes a retomar sua liberdade de movimento e viver sem limitações é o que guia cada etapa do meu trabalho.</p>
   </section>
 
   <section id="servicos" class="services">
