Add phone number

--- a/index.html
+++ b/index.html
@@ -451,15 +451,13 @@
     </form>
 
     <div class="contact-info">
-        <p><strong>Telefone:</strong> #</p>
-        <p><strong>E-mail:</strong> seu-email@dominio.com</p>
-        <p><strong>Endereço:</strong> #</p>
+        <p><strong>Telefone:</strong>+55 (61) 98180-6077</p>
     </div>
 </section>
 </div>
 
 <!-- Botão do WhatsApp -->
-<a href="https://wa.me/+55YOURNUMBER" class="whatsapp-button" target="_blank" title="Enviar mensagem no WhatsApp"></a>
+<a href="https://wa.me/+5561981806077" class="whatsapp-button" target="_blank" title="Enviar mensagem no WhatsApp"></a>
 
 <footer>
     <p>&copy; 2025 Dr. Vinícius Januário de Souza - Todos os direitos reservados.</p>
