--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
   
     <div style="margin-top:2rem; background:#004494; color:white; padding:1.5rem; border-radius:8px; text-align:center;">
       <h3 style="margin:0; font-size:1.5rem;">Além da hérnia</h3>
-      <p style="margin:0.5rem 0 0;">Tratamos a dor em sua essência — não apenas o problema, mas a sua qualidade de vida.</p>
+      <p style="margin:0.5rem 0 0;">Tratamos a dor em sua essência — nem toda dor na coluna é o que te dizem</p>
     </div>
   </section>
   <section id="slides">
