Update contact info

--- a/index.html
+++ b/index.html
@@ -451,14 +451,17 @@
     </form>
 
     <div class="contact-info">
-        <p><strong>Telefone:</strong>+55 (61) 98180-6077</p>
+      <br>
+      <address>
+        Entre em contato conosco por <a href="https://wa.me/+5511999970082" >WhatsApp (+55 11 99997-0082)</a> ou email <a href="mailto:support@example.com">drviniciusjanuario@outlook.com</a>.
+      </address>     
     </div>
 </section>
 </div>
 
 <!-- Botão do WhatsApp -->
-<a href="https://wa.me/+5561981806077" class="whatsapp-button" target="_blank" title="Enviar mensagem no WhatsApp"></a>
-
+<a href="https://wa.me/+5511999970082" class="whatsapp-button" target="_blank" title="Enviar mensagem no WhatsApp"></a>
+  
 <footer>
     <p>&copy; 2025 Dr. Vinícius Januário de Souza - Todos os direitos reservados.</p>
     <p>Developed by <a href="https://github.com/YagoMCastro" class="footer-link">Yago M Castro</a></p>
